--- a/strict-containers/strict-containers.cabal
+++ b/strict-containers/strict-containers.cabal
@@ -142,6 +142,8 @@ library
     Data.Strict.Vector.Internal
     -- generated list for Vector
     -- DO NOT EDIT below, AUTOGEN Vector
+    Data.Strict.Vector.Autogen
+    Data.Strict.Vector.Autogen.Mutable
     -- DO NOT EDIT above, AUTOGEN Vector
 
   include-dirs: include
@@ -149,46 +151,26 @@ library
 -- generated list for tests
 -- DO NOT EDIT below, AUTOGEN tests
 test-suite map-strict-properties
+  import: test-deps
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          map-properties.hs
   type:             exitcode-stdio-1.0
-  build-depends:    containers, strict-containers
-  build-depends:
-      array    >=0.4.0.0
-    , base     >=4.6     && <5
-    , deepseq  >=1.2     && <1.5
-
   cpp-options:      -DSTRICT
+
   ghc-options:      -O2
   other-extensions:
     BangPatterns
     CPP
 
-  build-depends:
-      HUnit
-    , QuickCheck                  >=2.7.1
-    , test-framework
-    , test-framework-hunit
-    , test-framework-quickcheck2
-    , transformers
-
 test-suite map-strictness-properties
+  import: test-deps
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          map-strictness.hs
   type:             exitcode-stdio-1.0
-  build-depends:    containers, strict-containers
   build-depends:
-      array                       >=0.4.0.0
-    , base                        >=4.6     && <5
-    , ChasingBottoms
-    , deepseq                     >=1.2     && <1.5
-    , HUnit
-    , QuickCheck                  >=2.7.1
-    , test-framework              >=0.3.3
-    , test-framework-quickcheck2  >=0.2.9
-    , test-framework-hunit
+      ChasingBottoms
 
   ghc-options:      -Wall
   other-extensions:
@@ -198,33 +180,28 @@ test-suite map-strictness-properties
   other-modules:
     Utils.IsUnit
 
+  if impl(ghc >= 8.6)
+    build-depends:
+      nothunks
+    other-modules:
+      Utils.NoThunks
+
 test-suite intmap-strict-properties
+  import: test-deps
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          intmap-properties.hs
   type:             exitcode-stdio-1.0
   cpp-options:      -DSTRICT
   other-modules:    IntMapValidity
-  build-depends:    strict-containers
-  build-depends:
-      array    >=0.4.0.0
-    , base     >=4.6     && <5
-    , deepseq  >=1.2     && <1.5
 
   ghc-options:      -O2
   other-extensions:
     BangPatterns
     CPP
 
-  build-depends:    containers, strict-containers
-  build-depends:
-      HUnit
-    , QuickCheck                  >=2.7.1
-    , test-framework
-    , test-framework-hunit
-    , test-framework-quickcheck2
-
 test-suite intmap-strictness-properties
+  import: test-deps
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          intmap-strictness.hs
@@ -233,63 +210,31 @@ test-suite intmap-strictness-properties
     BangPatterns
     CPP
 
-  build-depends:    containers, strict-containers
   build-depends:
-      array                       >=0.4.0.0
-    , base                        >=4.6     && <5
-    , ChasingBottoms
-    , deepseq                     >=1.2     && <1.5
-    , HUnit
-    , QuickCheck                  >=2.7.1
-    , test-framework              >=0.3.3
-    , test-framework-quickcheck2  >=0.2.9
-    , test-framework-hunit
+      ChasingBottoms
 
   ghc-options:      -Wall
 
   other-modules:
     Utils.IsUnit
 
+  if impl(ghc >= 8.6)
+    build-depends:
+      nothunks
+    other-modules:
+      Utils.NoThunks
+
 test-suite seq-properties
+  import: test-deps
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          seq-properties.hs
   type:             exitcode-stdio-1.0
-  build-depends:    strict-containers
-  build-depends:
-      array    >=0.4.0.0
-    , base     >=4.6     && <5
-    , deepseq  >=1.2     && <1.5
 
   ghc-options:      -O2
   other-extensions:
     BangPatterns
     CPP
-
-  build-depends:
-      QuickCheck                  >=2.7.1
-    , test-framework
-    , test-framework-quickcheck2
-    , transformers
-
-test-suite hashmap-strict-properties
-  hs-source-dirs: tests
-  main-is: HashMapProperties.hs
-  type: exitcode-stdio-1.0
-
-  build-depends:
-    base,
-    containers >= 0.5.8,
-    hashable >= 1.0.1.1,
-    QuickCheck >= 2.4.0.1,
-    test-framework >= 0.3.3,
-    test-framework-quickcheck2 >= 0.2.9,
-    strict-containers,
-    unordered-containers
-
-  default-language: Haskell2010
-  ghc-options: -Wall
-  cpp-options: -DASSERTS -DSTRICT
 
 test-suite vector-tests-O0
   Default-Language: Haskell2010
@@ -311,21 +256,24 @@ test-suite vector-tests-O0
                  QuickCheck >= 2.9 && < 2.15, HUnit, tasty,
                  tasty-hunit, tasty-quickcheck,
                  transformers >= 0.2.0.0
-  if !impl(ghc > 8.0)
-    Build-Depends: semigroups
 
   default-extensions: CPP,
               ScopedTypeVariables,
               PatternGuards,
               MultiParamTypeClasses,
               FlexibleContexts,
-              Rank2Types,
+              RankNTypes,
               TypeSynonymInstances,
               TypeFamilies,
               TemplateHaskell
 
   Ghc-Options: -O0 -threaded
   Ghc-Options: -Wall
+
+  if !flag(Wall)
+    Ghc-Options: -fno-warn-orphans -fno-warn-missing-signatures
+    if impl(ghc >= 8.0) && impl(ghc < 8.1)
+      Ghc-Options: -Wno-redundant-constraints
 
 
 -- DO NOT EDIT above, AUTOGEN tests
